scrollbar: fix so no overflow for legend under graph
Adds 1px of padding to the graph legend scroll div so that a non-table
legend does not get an unnecessary scroll bar.

--- a/public/sass/components/_panel_graph.scss
+++ b/public/sass/components/_panel_graph.scss
@@ -75,6 +75,7 @@
 .graph-legend-scroll {
   position: relative;
   overflow: auto !important;
+  padding: 1px;
 }
 
 .graph-legend-icon {
